--- a/client/main.css
+++ b/client/main.css
@@ -2,7 +2,8 @@
 body {
   font-family: sans-serif;
   background-color: #315481;
-  background-image: linear-gradient(to bottom, #315481, #918e82 100%);
+  background-image: url("/images/image.jpg");
+  background-size: cover;
   background-attachment: fixed;
  
   position: absolute;
