--- a/client/main.css
+++ b/client/main.css
@@ -2,7 +2,7 @@
 body {
   font-family: sans-serif;
   background-color: #315481;
-  background-image: url("/images/image.jpg");
+  background-image: url("/images/image.png");
   background-size: cover;
   background-attachment: fixed;
  
