--- a/client/main.css
+++ b/client/main.css
@@ -1,4 +1,8 @@
 /* CSS declarations go here */
+* {
+    color: gray;
+}
+
 body {
   font-family: sans-serif;
   background-color: #315481;
@@ -16,13 +20,6 @@ body {
   margin: 0;
  
   font-size: 14px;
-}
- 
-header {
-  background: #d2edf4;
-  background-image: linear-gradient(to bottom, #d0edf5, #e1e5f0 100%);
-  padding: 20px 15px 15px 15px;
-  position: relative;
 }
  
 #login-buttons {
@@ -57,35 +54,7 @@ ul {
   border: none;
   position: relative;
 }
- 
-li {
-  position: relative;
-  list-style: none;
-  padding: 15px;
-  border-bottom: #eee solid 1px;
-}
- 
-li .text {
-  margin-left: 10px;
-}
- 
-li.checked {
-  color: #888;
-}
- 
-li.checked .text {
-  text-decoration: line-through;
-}
- 
-li.private {
-  background: #eee;
-  border-color: #ddd;
-}
- 
-header .hide-completed {
-  float: right;
-}
- 
+  
 .toggle-private {
   margin-left: 5px;
 }
