--- a/client/main.css
+++ b/client/main.css
@@ -1,5 +1,15 @@
 /* CSS declarations go here */
-*{color: gray;}
+
+* {
+    color: black;
+}
+
+.login-link-text{
+    font-family: sans-serif;
+    color:#FFFFFF;
+    font-size: 26px;
+}
+
 
 body {
   font-family: sans-serif;
@@ -20,22 +30,13 @@ body {
   font-size: 14px;
 }
  
-.container {
-  max-width: 600px;
-  margin: 0 auto;
-  min-height: 100%;
-  background: white;
-}
- 
-header {
-  background: #d2edf4;
-  background-image: linear-gradient(to bottom, #d0edf5, #e1e5f0 100%);
-  padding: 20px 15px 15px 15px;
-  position: relative;
-}
- 
 #login-buttons {
   display: block;
+  color: white;
+}
+
+#login-buttons a {
+    text-decoration: none;
 }
  
 h1 {
@@ -52,20 +53,6 @@ form {
   position: relative;
 }
  
-.new-task input {
-  box-sizing: border-box;
-  padding: 10px 0;
-  background: transparent;
-  border: none;
-  width: 100%;
-  padding-right: 80px;
-  font-size: 1em;
-}
- 
-.new-task input:focus{
-  outline: 0;
-}
- 
 ul {
   margin: 0;
   padding: 0;
@@ -80,35 +67,7 @@ ul {
   border: none;
   position: relative;
 }
- 
-li {
-  position: relative;
-  list-style: none;
-  padding: 15px;
-  border-bottom: #eee solid 1px;
-}
- 
-li .text {
-  margin-left: 10px;
-}
- 
-li.checked {
-  color: #888;
-}
- 
-li.checked .text {
-  text-decoration: line-through;
-}
- 
-li.private {
-  background: #eee;
-  border-color: #ddd;
-}
- 
-header .hide-completed {
-  float: right;
-}
- 
+  
 .toggle-private {
   margin-left: 5px;
 }
@@ -126,4 +85,9 @@ header .hide-completed {
   .new-task input {
     padding-bottom: 5px;
   }
+}
+
+input {
+    font-size:30px;
+    width: 40px;
 }
